# nbt

./: CHANGELOG.md  Install.md  Manual.md  README.md  nbt  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  install.yml
configs/: audio-inter-head-drift.example.yaml  embedding-contamination-diffusion.bendv2.example.yaml  embedding-contamination-diffusion.example.yaml  family-corpus-stratigraphy.example.yaml  family-embedding-contamination.example.yaml  family-governance-dissonance.example.yaml  family-inter-head-drift.example.yaml  family-justice-attractors.example.yaml  family-justice-reweighting.example.yaml  family-norm-perturbation.example.yaml  family-residual-distortion.example.yaml  gan-stratigraphy-edges.example.yaml  geopolitical.example.yaml  governance-shock-recovery-diffusion.example.yaml  governance-shock-recovery-diffusion.first.yaml  hello-experiment.example.yaml  llm-sampling-stratigraphy.example.yaml  norm-drift-collapse-recovery-diffusion.example.yaml  norm-drift-collapse-recovery-diffusion.first.yaml  residual-echo-chamber-diffusion.example.yaml  residual-echo-chamber-diffusion.first.yaml
console_ui/: README.md  index.html  package.json  tsconfig.json
console_ui/src/: App.tsx  styles.css
docs/: CONSOLE_PERFORMANCE.md  CONSOLE_REAL_MODELS.md  CONSOLE_UI.md  FIGURES_AND_REPORTS.md  GEOPOLITICAL_BEND.md  OVERVIEW.md  PATCHES.md  RUNS_AND_ARTIFACTS.md  audio-adapter.md  bend_v2_spec.md  cli.md  diffusion-adapter-diffusers.md  dissertation-bend-families.md  gan-adapter-stylegan.md  geopolitical-bend.md  getting-started.md  index.md  llm-adapter-hf.md  run-report-analysis.md  runs-metrics-artifacts.md
figures/specs/: attention_entropy_timeseries.yaml  attractor_density_comparison.yaml  causal_framing_bar_chart.yaml  divergence_bar_chart.yaml  embedding_similarity_heatmap.yaml  embedding_umap_scatter.yaml  montage_grid.yaml  refusal_rate_table_to_figure.yaml
interface-bending-toolkit/: atlas_builder.py  config.yaml  drift_score.py  howto.txt  interface_bends.py  process_runs.py  readme.md  requirements.txt  setup.sh  toolbox.py
interface-bending-toolkit/NEW_BENDS_POC/: README.md  attention_bend.py  attention_head_disalign.py  care_norm_demo.py  clip_mismatch_injection.py  cross_modal_reweighting.py  embedding_bend.py  embedding_neighborhood_drift.py  gradient_freeze_reroute.py  justice_temporal_anchor.py  kv_memory_drift.py  latent_bend.py  layernorm_bend.py  middle_layer_shear.py  (+13 more)
network-bending/: README.md  pyproject.toml
network-bending/src/network_bending/: __init__.py  gui.py  toolbox.py
network-bending/src/network_bending/bends/: __init__.py  attention_bends.py  multimodal_bends.py  normalization_bends.py  positional_bends.py  residual_bends.py  substrate_bends.py
patches/: diffusion_ab_compare.json  llm_ab_compare.json  starter_8_bends_ab.json
templates/: bend_v2.example.yaml  figure_caption.md  methods_appendix.md  theory_memo.md
tests/: test_analysis_utils.py  test_audio_gen_utils.py  test_bend_primitives.py  test_bend_tagging.py  test_bend_v2_diffusion.py  test_bend_v2_diffusion_norm.py  test_bend_v2_diffusion_residual.py  test_bend_v2_spec.py  test_config.py  test_console_bends.py  test_console_cli_patches.py  test_console_patch_validation.py  test_console_performance.py  test_console_runtime.py  test_console_starter_patch.py  test_console_ws.py  test_derived_metrics_and_classifier.py  test_diffusion_diffusers.py  test_dissertation_docs_cli.py  test_dissertation_families.py  test_embedding_contamination_diffusion.py  test_experiment_figure_specs.py  test_figures.py  test_figures_metastability.py  test_gan_stylegan_utils.py  test_geopolitical.py  test_geopolitical_report.py  test_geopolitical_utils.py  test_governance_shock_cli.py  test_governance_shock_recovery_diffusion.py  test_instrumentation.py  test_llm_sampling_stratigraphy.py  test_metastability.py  test_metastability_norm.py  test_metastability_residual.py  test_norm_drift_cli.py  test_norm_drift_collapse_recovery_diffusion.py  test_norm_hooks.py  test_registry.py  test_report_and_curate.py  (+3 more)
(+100 files in other folders)
