[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "network-bending"
version = "0.1.0"
description = "Media-theoretical neural bending toolkit"
readme = "README.md"
authors = [{ name = "Network Bending Collective" }]
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "torch>=1.13",
    "transformers>=4.30",
]

[project.urls]
Homepage = "https://example.com/network-bending"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
network_bending = ["py.typed"]
